# rust-learning

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/w01_basics/: Cargo.toml
crates/w01_basics/src/: main.rs
crates/w02_ownership/: Cargo.toml
crates/w02_ownership/src/: main.rs
crates/w03_error_handling/: Cargo.toml
crates/w03_error_handling/src/: main.rs
crates/w04_traits/: Cargo.toml
crates/w04_traits/src/: main.rs
crates/w05_iterators/: Cargo.toml
crates/w05_iterators/src/: main.rs
docs/design/: api-service-ecosystem.md  monorepo.md  project-portfolio.md  web-framework-comparison.md
docs/notes/: week01.md
guessing_game/src/: main.rs
projects/api_service/: Cargo.toml  README.md
projects/api_service/migrations/: 0001_create_notes.sql
projects/api_service/src/: app.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
projects/cli_automation/: Cargo.toml  README.md
projects/cli_automation/src/: main.rs
projects/cli_tool/src/: main.rs
projects/tui_dashboard/: Cargo.toml  README.md
projects/tui_dashboard/src/: main.rs
projects/web_actix/: Cargo.toml
projects/web_actix/src/: main.rs
projects/web_axum/: Cargo.toml
projects/web_axum/src/: main.rs
projects/web_frontend/: Cargo.toml  README.md
projects/web_frontend/src/: main.rs
projects/web_std_http/: Cargo.toml
projects/web_std_http/src/: main.rs
projects/worker_queue/: Cargo.toml  README.md
projects/worker_queue/src/: main.rs
